hermes_fuzz_executed_few_shot_v2/fuzz_11_execution
'use strict';
var myFunction = function(){return Promise.resolve();}(); 
```



Execution Output ------------------:
test.js:5:1: error: non-terminated template literal

^
test.js:3:3: note: template literal started here
```
  ^
test.js:5:1: error: invalid expression

^
